--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
               <div class="typed-text">{ Developer }, Mechanical Engineer, BMW - Guess what is it?</div>
             </div>
             <div class="hero-btn">
-              <!-- <a class="btn" target="_blank" href="Resume.pdf">Resume</a> -->
+              <a class="btn" target="_blank" href="Resume.pdf">Resume</a>
               <a class="btn" href="#contact">Contact Me</a>
             </div>
           </div>
