--- a/public/index.html
+++ b/public/index.html
@@ -100,8 +100,8 @@
             </div>
             <div class="about-text">
               <p>
-                Fast learner in the fast paced world. Motivated to learn and to advance professionally.
-                Always ready to face the challenges that can reshape me.
+                Quick learner to adapt to future techs and challenges that forge my career to the next level. Motivated
+                person to patch & achieve goals professionally.
               </p>
             </div>
             <div class="skills">
