--- a/public/index.html
+++ b/public/index.html
@@ -238,8 +238,8 @@
             <h2>Operation In-charge</h2>
             <h4>Esthell Rubbers Pvt. Ltd., Chennai, India</h4>
             <p>
-              Handled production and acquiring the daily operations needs<br />
-              Involved in maintaining industry and development<br />
+              Responsible for production and daily operation needs<br />
+              Involved in maintaining the industry and development<br />
             </p>
           </div>
         </div>
@@ -250,8 +250,8 @@
             <h4>Paragon Digital Service Pvt. Ltd., Chennai, India</h4>
             <p>
               Handled US Youtube Channels Like E! News, CW & KUWTK<br />
-              Upload & Optimizing videos and maintaining the channel community<br />
-              Performing daily updates with the latest info!<br />
+              Responsible for Upload & Optimizing videos and maintaining the channels community<br />
+              Accomplishing daily updates with the latest info on the channels<br />
             </p>
           </div>
         </div>
