--- a/public/index.html
+++ b/public/index.html
@@ -340,13 +340,13 @@
         <div class="footer-info">
           <div class="footer-social">
 
-            <a href="https://www.linkedin.com/in/raghava-anand-b72662131"><i class="fab fa-linkedin-in"></i></a>
+            <a href="www.linkedin.com/in/raghava-anand"><i class="fab fa-linkedin-in"></i></a>
 
           </div>
         </div>
       </div>
       <div class="container copyright">
-        <p>&copy; <a href="https://www.linkedin.com/in/raghava-anand-b72662131">RaghavaAnand</a>, All Right Reserved
+        <p>&copy; <a href="www.linkedin.com/in/raghava-anand">RaghavaAnand</a>, All Right Reserved
           | <a href="https://htmlcodex.com">HTML Codex</a></p>
       </div>
     </div>
