--- a/public/index.html
+++ b/public/index.html
@@ -66,8 +66,10 @@
               <div class="typed-text">{ Developer }, Mechanical Engineer, BMW - Guess what is it?</div>
             </div>
             <div class="hero-btn">
-              <a class="btn" target="_blank" href="Resume.pdf">Resume</a>
+              <a class="btn" target="_blank"
+                href="https://drive.google.com/file/d/143or4brTU4tgE7vMn2rTWMVWIV9RE3dd/view?usp=sharing">Resume</a>
               <a class="btn" href="#contact">Contact Me</a>
+              <a class="btn" href="https://github.com/raghava20" target="_blank"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
@@ -107,10 +109,10 @@
             <div class="skills">
               <div class="skill-name">
                 <p>HTML5 | CSS | Bootstrap</p>
-                <p>80%</p>
+                <p>75%</p>
               </div>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
               <div class="skill-name">
@@ -139,7 +141,7 @@
               </div>
               <div class="skill-name">
                 <p>Mongo DB</p>
-                <p>90%</p>
+                <p>85%</p>
               </div>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
@@ -175,17 +177,16 @@
                 <p><i class="far fa-calendar-alt"></i>Jan 2022</p>
               </div>
               <p>
-                Developed for GUVI Hackathon. Uses JWT authentication. Users can log into their
-                accounts and view the leads, service request (create, update, receive) and maintained
-                with respective role management.
+                A web app to a User can view the leads, service request also perform these(create, update, receive)
+                actions. It has been implemented with the respective role management.
               </p>
               <p>
-                <b>Technologies Used:</b> Node JS & MongoDB for managing Role management, Bootstrap &
-                React for front-end.
+                <b>Technologies Used:</b>React, NodeJS, Express & MongoDB
               </p>
-              <a class="btn" href="https://github.com/raghava20/React_crm">Github <i class="fab fa-github"></i></a>
-              <a class="btn" href="https://inspiring-ramanujan-6d5121.netlify.app/login">Deployment Link <i
-                  class="fa fa-angle-right"></i></a>
+              <a class="btn" href="https://github.com/raghava20/React_crm" target="_blank">Github <i
+                  class="fab fa-github"></i></a>
+              <a class="btn" href="https://inspiring-ramanujan-6d5121.netlify.app/login" target="_blank">Deployment Link
+                <i class="fa fa-angle-right"></i></a>
             </div>
           </div>
         </div>
@@ -203,15 +204,14 @@
                 <p><i class="far fa-calendar-alt"></i>Jan 2021</p>
               </div>
               <p>
-                Capstone Project on GUVI. Built a web application to manage petty cash for customers
-                with JWT authentication.
+                Built a web application to manage petty cash for customer's expenses
               </p>
               <p>
-                <b>Technologies Used:</b> React, Node, JWT, MongoDB & Mongoose
+                <b>Technologies Used:</b> React, Node, Express, JWT, MongoDB & Mongoose
               </p>
-              <a class="btn" href="https://github.com/raghava20/pettyCash_client">Github <i
+              <a class="btn" href="https://github.com/raghava20/pettyCash_client" target="_blank">Github <i
                   class="fab fa-github"></i></a>
-              <a class="btn" href="https://quirky-keller-607fbf.netlify.app/login">Deployment Link <i
+              <a class="btn" href="https://quirky-keller-607fbf.netlify.app/login" target="_blank">Deployment Link <i
                   class="fa fa-angle-right"></i></a>
             </div>
           </div>
@@ -232,17 +232,6 @@
         <h2>Work Experience</h2>
       </header>
       <div class="timeline">
-        <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
-          <div class="timeline-text">
-            <div class="timeline-date">August 2018 -September 2019</div>
-            <h2>Operation In-charge</h2>
-            <h4>Esthell Rubbers Pvt. Ltd., Chennai, India</h4>
-            <p>
-              Responsible for production and daily operation needs<br />
-              Involved in maintaining the industry and development<br />
-            </p>
-          </div>
-        </div>
         <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
           <div class="timeline-text">
             <div class="timeline-date">November 2019 - August 2021</div>
@@ -252,6 +241,19 @@
               Handled US Youtube Channels Like E! News, CW & KUWTK<br />
               Responsible for Upload & Optimizing videos and maintaining the channels community<br />
               Accomplishing daily updates with the latest info on the channels<br />
+            </p>
+          </div>
+        </div>
+        <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
+          <div class="timeline-text">
+            <div class="timeline-date">August 2018 -September 2019</div>
+            <h2>Operation In-charge</h2>
+            <h4>Esthell Rubbers Pvt. Ltd., Chennai, India</h4>
+            <p>
+              Responsible for production and daily operation needs<br />
+              Involved in maintaining the industry needs from end-to-end<br />
+              Also been a part of the maintenance team<br />
+              <br />
             </p>
           </div>
         </div>
@@ -339,15 +341,14 @@
       <div class="container">
         <div class="footer-info">
           <div class="footer-social">
-
-            <a href="www.linkedin.com/in/raghava-anand"><i class="fab fa-linkedin-in"></i></a>
-
+            <a href="https://www.linkedin.com/in/raghava-anand" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://github.com/raghava20" target="_blank"><i class="fab fa-github"></i></a>
           </div>
         </div>
       </div>
       <div class="container copyright">
-        <p>&copy; <a href="www.linkedin.com/in/raghava-anand">RaghavaAnand</a>, All Right Reserved
-          | <a href="https://htmlcodex.com">HTML Codex</a></p>
+        <p>&copy; <a href="mailto:raghavaanand22@gmail.com">RaghavaAnand</a>, All Right
+          Reserved 2022</p>
       </div>
     </div>
   </div>
