--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
               <a class="btn" target="_blank"
                 href="https://drive.google.com/file/d/143or4brTU4tgE7vMn2rTWMVWIV9RE3dd/view?usp=sharing">Resume</a>
               <a class="btn" href="#contact">Contact Me</a>
-              <a class="btn" href="https://github.com/raghava20" target="_blank"><i class="fab fa-github"></i></a>
+              <a class="btn" href="https://github.com/raghava20" target="_blank"><i class="fab fa-github fa-2x"></i></a>
             </div>
           </div>
         </div>
@@ -232,7 +232,7 @@
         <h2>Work Experience</h2>
       </header>
       <div class="timeline">
-        <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
+        <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
           <div class="timeline-text">
             <div class="timeline-date">November 2019 - August 2021</div>
             <h2>Specialist Video Ops</h2>
@@ -244,7 +244,7 @@
             </p>
           </div>
         </div>
-        <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
+        <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
           <div class="timeline-text">
             <div class="timeline-date">August 2018 -September 2019</div>
             <h2>Operation In-charge</h2>
@@ -270,7 +270,7 @@
         <p>Add-ON</p>
         <h2>CERTIFICATIONS</h2>
       </div>
-      <div class="row">
+      <div class="row justify-content-center">
         <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.0s"
           style="visibility: visible; animation-delay: 0s; animation-name: fadeInUp;">
           <div class="service-item">
