added 2 more projects

--- a/public/index.html
+++ b/public/index.html
@@ -157,6 +157,7 @@
   <!-- About End -->
 
   <!-- Project Blog Start -->
+
   <div class="blog" id="blog">
     <div class="container">
       <div class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
@@ -167,12 +168,70 @@
         <div class="col-lg-6">
           <div class="blog-item wow fadeInUp" data-wow-delay="0.1s">
             <div class="blog-img">
-              <img src="img/blog-2.jpg" alt="Blog">
+              <img src="img/dev work.png" alt="Blog">
+            </div>
+            <div class="blog-text">
+              <h2>Dev Works</h2>
+              <div class="blog-meta">
+                <p><i class="far fa-user"></i>Client and Server</p>
+                <p><i class="far fa-list-alt"></i>Web Application</p>
+                <p><i class="far fa-calendar-alt"></i>Feb 2022</p>
+              </div>
+              <p>
+                A web app for developers and freelancers to show their creative dev works to the world.
+                <br />
+                <br />
+              </p>
+              <p>
+                <b>Technologies Used:</b> React, Redux,NodeJS, Express, MongoDB & Mongoose
+              </p>
+              <a class="btn" href="https://github.com/raghava20/devWorks_client" target="_blank">FrontEnd <i
+                  class="fab fa-github"></i></a>
+              <a class="btn" href="https://github.com/raghava20/devWorks_server" target="_blank">BackEnd <i
+                  class="fab fa-github"></i></a>
+              <a class="btn" href="https://dev-works-app.netlify.app" target="_blank">Deployment Link
+                <i class="fa fa-angle-right"></i></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-6">
+          <div class="blog-item wow fadeInUp" data-wow-delay="0.1s">
+            <div class="blog-img">
+              <img src="img/house painting.jpg" alt="Blog">
+            </div>
+            <div class="blog-text">
+              <h2>House Painting Service</h2>
+              <div class="blog-meta">
+                <p><i class="far fa-user"></i>Client and Server</p>
+                <p><i class="far fa-list-alt"></i>Web Application</p>
+                <p><i class="far fa-calendar-alt"></i>Feb 2022</p>
+              </div>
+              <p>
+                A web app for customers to book a painting service from their house and integrated with real-time
+                collecting money using Razorpay payment method.
+              </p>
+              <p>
+                <b>Technologies Used:</b> React, Redux, Razorpay, NodeJS, Express, MongoDB & Mongoose
+              </p>
+              <a class="btn" href="https://github.com/raghava20/housePaintingService_client" target="_blank">FrontEnd <i
+                  class="fab fa-github"></i></a>
+              <a class="btn" href="https://github.com/raghava20/housePaintingService_server" target="_blank">BackEnd <i
+                  class="fab fa-github"></i></a>
+              <a class="btn" href="https://house-painting-service.netlify.app" target="_blank">Deployment Link
+                <i class="fa fa-angle-right"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="blog-item wow fadeInUp" data-wow-delay="0.1s">
+            <div class="blog-img">
+              <img src="img/crm.jpg" alt="Blog">
             </div>
             <div class="blog-text">
               <h2>Customer RelationShip Management</h2>
               <div class="blog-meta">
-                <p><i class="far fa-user"></i>Server and Client</p>
+                <p><i class="far fa-user"></i>Client and Server</p>
                 <p><i class="far fa-list-alt"></i>Web Application</p>
                 <p><i class="far fa-calendar-alt"></i>Jan 2022</p>
               </div>
@@ -181,9 +240,12 @@
                 actions. It has been implemented with the respective role management.
               </p>
               <p>
-                <b>Technologies Used:</b>React, NodeJS, Express & MongoDB
+                <b>Technologies Used:</b> React, NodeJS, Express & MongoDB
+
               </p>
-              <a class="btn" href="https://github.com/raghava20/React_crm" target="_blank">Github <i
+              <a class="btn" href="https://github.com/raghava20/React_crm" target="_blank">FrontEnd <i
+                  class="fab fa-github"></i></a>
+              <a class="btn" href="https://github.com/raghava20/Node_crm" target="_blank">BackEnd <i
                   class="fab fa-github"></i></a>
               <a class="btn" href="https://inspiring-ramanujan-6d5121.netlify.app/login" target="_blank">Deployment Link
                 <i class="fa fa-angle-right"></i></a>
@@ -194,7 +256,7 @@
         <div class="col-lg-6">
           <div class="blog-item wow fadeInUp" data-wow-delay="0.1s">
             <div class="blog-img">
-              <img src="img/blog-3.jpg" alt="Blog">
+              <img src="img/petty cash.jpg" alt="Blog">
             </div>
             <div class="blog-text">
               <h2>Petty Cash Manager</h2>
@@ -204,12 +266,17 @@
                 <p><i class="far fa-calendar-alt"></i>Jan 2021</p>
               </div>
               <p>
-                Built a web application to manage petty cash for customer's expenses
+                Built a web application to record petty cash for customer's expenses on their industry.
+                <br />
+                <br />
               </p>
-              <p>
+              <p class="mt-3">
                 <b>Technologies Used:</b> React, Node, Express, JWT, MongoDB & Mongoose
+                <br />
               </p>
-              <a class="btn" href="https://github.com/raghava20/pettyCash_client" target="_blank">Github <i
+              <a class="btn" href="https://github.com/raghava20/pettyCash_client" target="_blank">FrontEnd <i
+                  class="fab fa-github"></i></a>
+              <a class="btn" href="https://github.com/raghava20/pettyCash_server" target="_blank">BackEnd <i
                   class="fab fa-github"></i></a>
               <a class="btn" href="https://quirky-keller-607fbf.netlify.app/login" target="_blank">Deployment Link <i
                   class="fa fa-angle-right"></i></a>
